# pyinline

./: .gitignore  LICENSE  README.md  inline.py  pyproject.toml  test.py
pyinline/: __init__.py  __main__.py
tests/: test_constant_parameter.py  test_indentedblock.py  test_name_collission.py  test_nesting.py  test_recursive.py  test_simplestatement.py
