[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyinline"
authors = [{name = "Anthony Shaw", email = "anthonyshaw@apache.org"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires = ["libcst"]

[project.urls]
Home = "https://github.com/tonybaloney/pyinline"
