[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyinline"
authors = [{name = "Anthony Shaw"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["libcst >= 0.3.23,<0.4"]

[project.urls]
Home = "https://github.com/tonybaloney/pyinline"
